fix: hide header on small screem

--- a/src/app/core/components/header/header.component.scss
+++ b/src/app/core/components/header/header.component.scss
@@ -34,3 +34,9 @@
   font-weight: normal;
   background: rgba(255, 255, 255, 0.8);
 }
+
+@media (max-width: 500px) {
+  .header {
+    display: none;
+  }
+}
